fixed the homepage link in the package.json file

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://your-username.github.io/launch-countdown-timer",
+  "homepage": "https://francoraymond.github.io/launch-countdown-timer",
   "name": "launch-countdown-timer",
   "private": true,
   "version": "0.0.0",
